Post parameters for Keyboards and Manufacturers.
